Fixed Existing Backups table spacing

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -48,12 +48,6 @@ body div.content {
   background-color: white;
 }
 
-/* MDB: uniform.js
-li input[type="checkbox"] {
-    margin-left: -7px;
-}
-*/
-
 h1, h2, h3, h4 {
     margin-left: 20px;
 }
@@ -94,23 +88,6 @@ li {
 li * {
     vertical-align: middle;
 }
-
-/* MDB: uniform.js
-.text {
-    font-family: monospace;
-    border-color: black;
-    border-style: solid;
-    border-width: 2px;
-    padding: 3px;
-    font-size: 16px;
-}
-
-input {
-    display: inline;
-    margin: 0px;
-    padding: 0px;
-}
-*/
 
 .section, body > div.wrapper {
     border-width: 1px;
@@ -234,26 +211,13 @@ td {
 	padding-right: 20px;
 	padding-top: 2px;
 	padding-bottom: 2px;
+    vertical-align: middle;
+    max-width: 200px;
 }
 
 td:first-child {
 	padding: 0px 5px 4px 0px;
-	width: 10px;
 }
-
-/*
-td input {
-	margin: 0px;
-}
-
-td input.checkbox {
-    position: absolute;
-    height: 13px;
-    width: 13px;
-    top: 0px;
-    left: 0px;
-}
-*/
 
 .configuration-list label {
 	padding-right: 10px;
